new updates to UI and mechanics

--- a/index.html
+++ b/index.html
@@ -9,16 +9,8 @@
 </head>
 <body>
     <div class="main">
-        <div class="game">
-            <div class="square" id="exampleone" onclick="test();"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+        <div class="game" id="gamediv">
+    
         </div>
     </div>
 
