--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
+    <div class="title">TIC - TAC - TOE</div>
+    <div class="top" id="top">
+        Who Gon' Win ?
+    </div>
     <div class="main">
         <div class="game" id="gamediv">
     
         </div>
     </div>
+    <div class="bottom">
+        <button id="btn" onclick="clearer();">Reset</button>
+    </div>
+    <div class="footer">Made By <a href=https://github.com/portoalbert>Albert Porto</a></div>
+    
+
 
     <script src="app.js"></script>
 </body>
